consider selection on download & upload actions